openmetadata-docs/content/v1.1.x/how-to-guides/data-governance/index.md
---
title: Data Governance
slug: /how-to-guides/data-governance
---

# Data Governance

OpenMetadata is a rich collaborative platform for data teams. Data producers and data consumers can access all their organizational metadata from OpenMetadata. Users can mutually benefit from the team’s collaborative expertise around data. With several teams and users having access to the organizational data assets in OpenMetadata, it is crucial to have some form of governance in place. OpenMetadata supports [fine-grained Access Control Roles and Policies](https://docs.open-metadata.org/v1.1.x/how-to-guides/admin-guide-roles-policies) to ensure data security.

Apart from well-defined access control roles and policies, a common vocabulary within the organization fosters effective collaboration and helps in data governance. A **Business Glossary** plays an important role in defining the common terminology in the organization. Data also needs be classified and tagged for policy enforcement purposes like privacy policy, data management policy, data retention policy, and so on. Using **Classification** you can manage access to the PII sensitive data in OpenMetadata.

{%inlineCallout
color="violet-70"
bold="Glossary and Classification"
icon="MdMenuBook"
href="/how-to-guides/data-governance/glossary-classification"%}
Learn more about the Glossaries and Classification Tags in OpenMetadata.
{%/inlineCallout%}
